<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sbtnRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEstadisticas"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sbtnEstadisticas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sbtnAyuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgAndroid"
        android:layout_width="323dp"
        android:layout_height="466dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEstadisticas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/homefondo" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="364dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/stxtBienvenido"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/imgAndroid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

</androidx.constraintlayout.widget.ConstraintLayout>