<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistro">

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="194dp"
        android:layout_height="39dp"
        android:text="@string/stxtRegistro"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btnEnviarDatos"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sbtnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptNota4"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptNombre"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="Nombre Completo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Documento"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptDocumento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptDocumento"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <EditText
        android:id="@+id/txtMateria1"
        android:textAlignment="center"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="308dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="asignatura"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptNota1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iptNota1"
        android:textAlignment="center"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="Nota"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptTelefono"
        app:layout_constraintVertical_bias="0.215" />

    <EditText
        android:id="@+id/txtMateria4"
        android:textAlignment="center"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="asignatura"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptNota4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptNota2" />

    <EditText
        android:id="@+id/iptNota4"
        android:layout_width="164dp"
        android:textAlignment="center"
        android:layout_height="42dp"
        android:layout_marginBottom="148dp"
        android:ems="10"
        android:hint="Nota"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtMateria3"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="asignatura"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptNota3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptNota1"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptNota3"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:hint="Nota"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/iptNota5"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginBottom="104dp"
        android:textAlignment="center"
        android:ems="10"
        android:hint="Nota"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtMateria5"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:textAlignment="center"
        android:ems="10"
        android:hint="asignatura"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptNota5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptNota3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptNota2"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginBottom="260dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Nota"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtMateria2"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="asignatura"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptNota2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptDireccion"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnVolverRegistro"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sbtnVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptNota5"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptTelefono"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/iptEdad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telefono"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toEndOf="@+id/txtEdad"
        app:layout_constraintTop_toBottomOf="@+id/iptNombre"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptDireccion"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iptNota1"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Direccion"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptDireccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptEdad"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/iptEdad"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/txtEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edad"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iptEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iptDocumento"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>